# krafton-game

./: CMakeLists.txt  Readme.md
client/: ClientMain.cpp  ClientNetwork.cpp  ClientNetwork.hpp  GameClient.cpp  GameClient.hpp  Interpolation.cpp  Interpolation.hpp  Prediction.cpp  Prediction.hpp  Render.cpp  Render.hpp
include/: GameCommon.hpp  GameProtocol.hpp  LagSimulator.hpp  NetTypes.hpp  Shared.hpp
server/: GameServer.cpp  GameServer.hpp  ServerMain.cpp  ServerNetwork.cpp  ServerNetwork.hpp  ServerPlayer.cpp  ServerPlayer.hpp
tests/: TestInterpolation.cpp  TestReconciliation.cpp
